# seb-data

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  local_test.py  pyproject.toml
.github/workflows/: terraform.yaml
cloud_function/: gcs_to_bq.py  main.py  requirements.txt
dataflow/: Dockerfile  pipeline.py  requirements.txt
docs/: diagram.py
terraform/: big_query.tf  data.tf  dataflow-tpl.json  dataflow.tf  function.tf  gcs.tf  iam.tf  locals.tf  providers.tf  pubsub.tf  remote_state.tf  repository.tf  variables.tf
terraform/tfvars/: common.tfvars  edge.tfvars
tests/: conftest.py
tests/cloud_function/: test_main.py
