[tool.poetry]
name = "seb-data"
version = "0.1.0"
description = ""
authors = ["ajauniskis <jauniskis.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.6.1"
functions-framework = "^3.8.2"


[tool.poetry.group.dev.dependencies]
google-cloud-storage = "^2.18.2"
google-cloud-dataflow-client = "^0.8.14"
google-api-core = "^2.23.0"
google-api-python-client = "^2.154.0"
cloudevents = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
